<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragments.FragmentSummonerHistoric">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerSummoners"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
